Uppdaterat authorities.yaml för sit2

--- a/src/main/resources/webcert/authorities.yaml
+++ b/src/main/resources/webcert/authorities.yaml
@@ -63,6 +63,7 @@ knownIntygstyper:
   - &ki110 ag114
   - &ki120 ag7804
   - &ki111 af00251
+  - &ki130 tstrk1062
   - &ki140 tstrk1009
 
 # De rättigheter som systemet har
@@ -85,6 +86,9 @@ knownPrivileges:
   - &kp130 NOTIFIERING_UTKAST
   - &kp140 HANTERA_SEKRETESSMARKERAD_PATIENT
   - &kp150 GODKANNA_MOTTAGARE
+  - &kp160 SKAPA_NY_FRAGA
+  - &kp170 LASA_FRAGA
+  - &kp180 BESVARA_FRAGA
 
 # De roller som systemet har
 knownRoles:
@@ -172,7 +176,9 @@ privileges:
           - *ki070 # luae_fs
           - *ki080 # db
           - *ki090 # doi
+          - *ki100 # af00213
           - *ki120 # ag7804
+          - *ki130 # TSTRK1062
           - *ki140 # tstrk1009
       - *ro020 # DJUPINTEGRATION
   - &p040
@@ -191,6 +197,7 @@ privileges:
       - *ki110 # ag114
       - *ki120 # ag7804
       - *ki111 # af00251
+      - *ki130 # TSTRK1062
       - *ki140 # tstrk1009
     requestOrigins:
       - *ro010 # NORMAL
@@ -283,6 +290,7 @@ privileges:
       - *ki110 # ag114
       - *ki120 # ag7804
       - *ki111 # af00251
+      - *ki130 # TSTRK1062
       - *ki140 # tstrk1009
     requestOrigins:
       - *ro020 # DJUPINTEGRATION
@@ -308,7 +316,36 @@ privileges:
     requestOrigins:
       - *ro010 # NORMAL
       - *ro020 # DJUPINTEGRATION
-
+  - &p160
+    name: *kp160
+    desc: Skapa ny administrativ fråga
+    intygstyper:
+      - *ki010 # fk7263
+      - *ki040 # lisjp
+      - *ki050 # luse
+      - *ki060 # luae_na
+      - *ki070 # luae_fs
+    requestOrigins: # Implicit alla
+  - &p170
+    name: *kp170
+    desc: Skapa ny administrativ fråga
+    intygstyper:
+      - *ki010 # fk7263
+      - *ki040 # lisjp
+      - *ki050 # luse
+      - *ki060 # luae_na
+      - *ki070 # luae_fs
+    requestOrigins: # Implicit alla
+  - &p180
+    name: *kp180
+    desc: Besvara administrativ fråga
+    intygstyper:
+      - *ki010 # fk7263
+      - *ki040 # lisjp
+      - *ki050 # luse
+      - *ki060 # luae_na
+      - *ki070 # luae_fs
+    requestOrigins: # Implicit alla
 # Roller
 roles:
   - &r010
@@ -362,6 +399,7 @@ roles:
               - *ki110 # ag114
               - *ki120 # ag7804
               - *ki111 # af00251
+              - *ki130 # TSTRK1062
               - *ki140 # tstrk1009
           - <<: *ro020 # DJUPINTEGRATION
             intygstyper: # EJ fk7263
@@ -377,6 +415,7 @@ roles:
               - *ki110 # ag114
               - *ki120 # ag7804
               - *ki111 # af00251
+              - *ki130 # TSTRK1062
               - *ki140 # tstrk1009
       - <<: *p040 # VIDAREBEFORDRA_UTKAST
         requestOrigins:
@@ -428,6 +467,55 @@ roles:
           - <<: *ro030 # UTHOPP
           - <<: *ro040 # READONLY
       - <<: *p150 # GODKANNA_MOTTAGARE
+      - <<: *p160 # SKAPA_NY_FRAGA
+        requestOrigins:
+          - <<: *ro010 # NORMAL
+            intygstyper:
+              - *ki040 # lisjp
+              - *ki050 # luse
+              - *ki060 # luae_na
+              - *ki070 # luae_fs
+          - <<: *ro020 # DJUPINTEGRATION
+            intygstyper:
+              - *ki040 # lisjp
+              - *ki050 # luse
+              - *ki060 # luae_na
+              - *ki070 # luae_fs
+          - <<: *ro030 # UTHOPP
+      - <<: *p170 # LASA_FRAGA
+        requestOrigins:
+          - <<: *ro010 # NORMAL
+            intygstyper:
+              - *ki040 # lisjp
+              - *ki050 # luse
+              - *ki060 # luae_na
+              - *ki070 # luae_fs
+          - <<: *ro040 # READONLY
+            intygstyper:
+              - *ki010 # fk7163
+              - *ki040 # lisjp
+          - <<: *ro020 # DJUPINTEGRATION
+            intygstyper:
+              - *ki040 # lisjp
+              - *ki050 # luse
+              - *ki060 # luae_na
+              - *ki070 # luae_fs
+          - <<: *ro030 # UTHOPP
+      - <<: *p180 # BESVARA_FRAGA
+        requestOrigins:
+          - <<: *ro010 # NORMAL
+            intygstyper:
+              - *ki040 # lisjp
+              - *ki050 # luse
+              - *ki060 # luae_na
+              - *ki070 # luae_fs
+          - <<: *ro020 # DJUPINTEGRATION
+            intygstyper:
+              - *ki040 # lisjp
+              - *ki050 # luse
+              - *ki060 # luae_na
+              - *ki070 # luae_fs
+          - <<: *ro030 # UTHOPP
   - &r020
     name: *kr020 # PRIVATLAKARE
     desc: Privatläkare
@@ -452,6 +540,7 @@ roles:
               - *ki050 # luse
               - *ki060 # luae_na
               - *ki070 # luae_fs
+              - *ki111 # af00251
       - <<: *p031 # ERSATTA_INTYG
         requestOrigins:
           - <<: *ro010 # NORMAL
@@ -468,6 +557,7 @@ roles:
               - *ki110 # ag114
               - *ki120 # ag7804
               - *ki111 # af00251
+              - *ki130 # TSTRK1062
               - *ki140 # tstrk1009
       - <<: *p060 # BESVARA_KOMPLETTERINGSFRAGA
         requestOrigins:
@@ -496,6 +586,30 @@ roles:
         requestOrigins:
           - <<: *ro010 # NORMAL
       - <<: *p150 # GODKANNA_MOTTAGARE
+      - <<: *p160 # SKAPA_NY_FRAGA
+        requestOrigins:
+          - <<: *ro010 # NORMAL
+            intygstyper:
+              - *ki040 # lisjp
+              - *ki050 # luse
+              - *ki060 # luae_na
+              - *ki070 # luae_fs
+      - <<: *p170 # LASA_FRAGA
+        requestOrigins:
+          - <<: *ro010 # NORMAL
+            intygstyper:
+              - *ki040 # lisjp
+              - *ki050 # luse
+              - *ki060 # luae_na
+              - *ki070 # luae_fs
+      - <<: *p180 # BESVARA_FRAGA
+        requestOrigins:
+          - <<: *ro010 # NORMAL
+            intygstyper:
+              - *ki040 # lisjp
+              - *ki050 # luse
+              - *ki060 # luae_na
+              - *ki070 # luae_fs
   - &r030
     name: *kr030 # TANDLAKARE
     desc: Tandläkare
@@ -504,6 +618,7 @@ roles:
         intygstyper:
           - *ki010 # fk7263
           - *ki040 # lisjp
+          - *ki100 # af00213
           - *ki110 # ag114
           - *ki120 # ag7804
           - *ki111 # af00251
@@ -517,6 +632,7 @@ roles:
         intygstyper:
           - *ki010 # fk7263
           - *ki040 # lisjp
+          - *ki100 # af00213
           - *ki110 # ag114
           - *ki120 # ag7804
           - *ki111 # af00251
@@ -526,6 +642,7 @@ roles:
       - <<: *p010 # SIGNERA_INTYG
         intygstyper:
           - *ki040 # lisjp
+          - *ki100 # af00213
           - *ki110 # ag114
           - *ki120 # ag7804
           - *ki111 # af00251
@@ -536,6 +653,7 @@ roles:
         intygstyper:
           - *ki010
           - *ki040
+          - *ki100 # af00213
           - *ki110
           - *ki120 # ag7804
           - *ki111 # af00251
@@ -553,6 +671,7 @@ roles:
       - <<: *p031 # ERSATTA_INTYG
         intygstyper:
           - *ki040 # lisjp
+          - *ki100 # af00213
           - *ki110 # ag114
           - *ki120 # ag7804
           - *ki111 # af00251
@@ -566,6 +685,7 @@ roles:
           - <<: *ro010 # NORMAL
             intygstyper:
               - *ki040
+              - *ki100 # af00213
               - *ki120 # ag7804
               - *ki111 # af00251
           - <<: *ro030 # UTHOPP
@@ -598,6 +718,7 @@ roles:
         intygstyper:
           - *ki010
           - *ki040
+          - *ki100 # af00213
           - *ki120 # ag7804
           - *ki111 # af00251
         requestOrigins:
@@ -605,17 +726,20 @@ roles:
             intygstyper:
               - *ki010
               - *ki040
+              - *ki100 # af00213
               - *ki120 # ag7804
               - *ki111 # af00251
       - <<: *p080 # ATKOMST_ANDRA_ENHETER
         intygstyper:
           - *ki010
           - *ki040
+          - *ki100 # af00213
         requestOrigins:
           - <<: *ro010 # NORMAL
             intygstyper:
               - *ki010
               - *ki040
+              - *ki100 # af00213
               - *ki120 # ag7804
               - *ki111 # af00251
           - <<: *ro030 # UTHOPP
@@ -625,6 +749,7 @@ roles:
         intygstyper:
           - *ki010
           - *ki040
+          - *ki100 #af00213
           - *ki120 # ag7804
           - *ki111 # af00251
         requestOrigins:
@@ -632,6 +757,7 @@ roles:
             intygstyper:
               - *ki010
               - *ki040
+              - *ki100 # af00213
               - *ki120 # ag7804
               - *ki111 # af00251
           - <<: *ro030 # UTHOPP
@@ -641,6 +767,7 @@ roles:
         intygstyper:
           - *ki010
           - *ki040
+          - *ki100 # af00213
           - *ki120 # ag7804
           - *ki111 # af00251
         requestOrigins:
@@ -648,6 +775,7 @@ roles:
             intygstyper:
               - *ki010
               - *ki040
+              - *ki100 # af00213
               - *ki120 # ag7804
               - *ki111 # af00251
           - <<: *ro030 # UTHOPP
@@ -657,6 +785,7 @@ roles:
         intygstyper:
           - *ki010
           - *ki040
+          - *ki100 # af00213
           - *ki120 # ag7804
           - *ki111 # af00251
         requestOrigins:
@@ -664,6 +793,7 @@ roles:
             intygstyper:
               - *ki010
               - *ki040
+              - *ki100 # af00213
               - *ki120 # ag7804
               - *ki111 # af00251
           - <<: *ro030 # UTHOPP
@@ -683,6 +813,7 @@ roles:
         intygstyper:
           - *ki010 # fk7263
           - *ki040 # lisjp
+          - *ki100 # af00213
           - *ki110 # ag114
           - *ki120 # ag7804
           - *ki111 # af00251
@@ -694,6 +825,45 @@ roles:
               - *ki010
               - *ki120 # ag7804
       - <<: *p150 # GODKANNA_MOTTAGARE
+      - <<: *p160 # SKAPA_NY_FRAGA
+        intygstyper:
+          - *ki040
+        requestOrigins:
+          - <<: *ro010 # NORMAL
+            intygstyper:
+              - *ki040
+          - <<: *ro020 # DJUPINTEGRATION
+            intygstyper:
+              - *ki040
+          - <<: *ro030 # UTHOPP
+            intygstyper:
+              - *ki010
+      - <<: *p170 # LASA_FRAGA
+        intygstyper:
+          - *ki040
+        requestOrigins:
+          - <<: *ro010 # NORMAL
+            intygstyper:
+              - *ki040
+          - <<: *ro020 # DJUPINTEGRATION
+            intygstyper:
+              - *ki040
+          - <<: *ro030 # UTHOPP
+            intygstyper:
+              - *ki010
+      - <<: *p180 # BESVARA_FRAGA
+        intygstyper:
+          - *ki040
+        requestOrigins:
+          - <<: *ro010 # NORMAL
+            intygstyper:
+              - *ki040
+          - <<: *ro020 # DJUPINTEGRATION
+            intygstyper:
+              - *ki040
+          - <<: *ro030 # UTHOPP
+            intygstyper:
+              - *ki010
   - &r040
     name: *kr040 # VARDADMINISTRATOR
     desc: Vårdadministratör
@@ -762,6 +932,56 @@ roles:
       - <<: *p130 # NOTIFIERING_UTKAST
         requestOrigins:
           - <<: *ro020 # DJUPINTEGRATION
+      - <<: *p160 # SKAPA_NY_FRAGA
+        requestOrigins:
+          - <<: *ro010 # NORMAL
+            intygstyper:
+              - *ki040 # lisjp
+              - *ki050 # luse
+              - *ki060 # luae_na
+              - *ki070 # luae_fs
+          - <<: *ro020 # DJUPINTEGRATION
+            intygstyper:
+              - *ki040 # lisjp
+              - *ki050 # luse
+              - *ki060 # luae_na
+              - *ki070 # luae_fs
+          - <<: *ro030 # UTHOPP
+      - <<: *p170 # LASA_FRAGA
+        requestOrigins:
+          - <<: *ro010 # NORMAL
+            intygstyper:
+              - *ki040 # lisjp
+              - *ki050 # luse
+              - *ki060 # luae_na
+              - *ki070 # luae_fs
+          - <<: *ro040 # READONLY
+            intygstyper:
+              - *ki010 # fk7263
+              - *ki040 # lisjp
+          - <<: *ro020 # DJUPINTEGRATION
+            intygstyper:
+              - *ki040 # lisjp
+              - *ki050 # luse
+              - *ki060 # luae_na
+              - *ki070 # luae_fs
+          - <<: *ro030 # UTHOPP
+      - <<: *p180 # BESVARA_FRAGA
+        requestOrigins:
+          - <<: *ro010 # NORMAL
+            intygstyper:
+              - *ki040 # lisjp
+              - *ki050 # luse
+              - *ki060 # luae_na
+              - *ki070 # luae_fs
+          - <<: *ro020 # DJUPINTEGRATION
+            intygstyper:
+              - *ki040 # lisjp
+              - *ki050 # luse
+              - *ki060 # luae_na
+              - *ki070 # luae_fs
+          - <<: *ro030 # UTHOPP
+
 
 # Legitimerade yrkesroller
 titles:
