INTYGFV-12143: Lagt till tester av ny minorversion av lisjp v1.1 samt brutit ut blanketttexter (texter som inte finns i xmlfil, bara i fks blankett) som properties knutna till resp minorversion.

--- a/src/main/resources/texts/texterMU_LISJP_v1.1.properties
+++ b/src/main/resources/texts/texterMU_LISJP_v1.1.properties
@@ -1,13 +1,13 @@
-#Properties for LISJP 1.0 pdf generation
+#Properties for LISJP 1.1 pdf generation
 
-formId=FK 7804 (001 F 001) Fastst\u00E4lld av F\u00F6rs\u00E4kringskassan
-formIdRow2=
+formId=FK 7804 (003 F 001) Fastst\u00E4lld av F\u00F6rs\u00E4kringskassan
+formIdRow2=i samr\u00E5d med Socialstyrelsen
 blankettId=7804
 blankettVersion=01
 
-#Extra texts used in pdf printing, and not specified as xml text keys.
-label.inte.kanner.patient=Om du inte k\u00E4nner patienten ska hen styrka\nsin identitet genom legitimation med foto\n(SOSFS 2005:29)
-label.gdpr.info=
+#Extra texts that exist in FK original DPF template and are not specified in xml text files. (can differ between minor versions)
+label.inte.kanner.patient=
+label.gdpr.info=L\u00E4s mer om F\u00F6rs\u00E4kringskassans behandling av personuppgifter p\u00E5 forsakringskassan.se.
 label.datum=datum (\u00E5r, m\u00E5nad, dag)
 label.from=fr\u00E5n och med (\u00E5r, m\u00E5nad, dag)
 label.tom=till och med (\u00E5r, m\u00E5nad, dag)
