--- a/src/main/resources/webcert/features.yaml
+++ b/src/main/resources/webcert/features.yaml
@@ -73,6 +73,7 @@ knownFeatures:
   - &kf200 NOTIFICATION_DISCARD_FELB
   - &kf210 FEATURE_UNIKT_UNDANTAG_OM_SENASTE_INTYG
   - &kf220 OAUTH_AUTHENTICATION
+  - &kf240 IDP_CONNECTIVITY_CHECK
 
 # Aktiverade features i Webcert
 features:
@@ -315,6 +316,10 @@ features:
     name: *kf220
     desc: Inloggning med OAuth
     global: true
+  - &f240
+  name: *kf240
+  desc: Aktivera IDP konnektivitetskontroll
+  global: false
 
 pilots:
   - name: SRS_PILOT
