bytte namn på feature-flagga

--- a/src/main/resources/webcert/features.yaml
+++ b/src/main/resources/webcert/features.yaml
@@ -72,7 +72,7 @@ knownFeatures:
   - &kf200 NOTIFICATION_DISCARD_FELB
   - &kf210 FEATURE_UNIKT_UNDANTAG_OM_SENASTE_INTYG
   - &kf220 OAUTH_AUTHENTICATION
-  - &kf240 AKTIVERA_IDP_KONNEKTIVITETSKONTROLL
+  - &kf240 IDP_CONNECTIVITY_CHECK
 
 # Aktiverade features i Webcert
 features:
