--- a/src/main/resources/webcert/features.yaml
+++ b/src/main/resources/webcert/features.yaml
@@ -73,6 +73,7 @@ knownFeatures:
   - &kf200 NOTIFICATION_DISCARD_FELB
   - &kf210 FEATURE_UNIKT_UNDANTAG_OM_SENASTE_INTYG
   - &kf220 OAUTH_AUTHENTICATION
+  - &kf240 IDP_CONNECTIVITY_CHECK
 
 # Aktiverade features i Webcert
 features:
@@ -315,6 +316,10 @@ features:
     name: *kf220
     desc: Inloggning med OAuth
     global: true
+  - &f240
+    name: *kf240
+    desc: Aktivera IDP konnektivitetskontroll
+    global: false
 
 pilots:
   - name: SRS_PILOT
@@ -324,28 +329,38 @@ pilots:
       - TSTNMT2321000156-1077
       # Enheter aktiverade för pilot i Produktion
       - SE2321000032-43SQ
-      - SE2321000032-4D3W
-      - SE2321000032-4D3C
-      - SE2321000032-43WD
       - SE2321000032-43SV
-      - SE2321000057-5SRX
-      - SE2321000057-4W4Z
-      - SE2321000057-4BNK
-      - SE2321000057-4BLN
+      - SE2321000032-43WD
+      - SE2321000032-4D3C
+      - SE2321000032-4D3W
       - SE2321000057-49T6
-      - SE2321000230-E00375
-      - SE2321000230-E00389
-      - SE2321000230-E00397
-      - SE2321000230-E00390
-      - SE2321000230-E00406
-      - SE2321000230-E00373
-      - SE2321000230-E00387
-      - SE2321000115-O77783
-      - SE2321000115-O15215
+      - SE2321000057-5VDQ
+      - SE2321000057-5VDP
+      - SE2321000057-4BLN
+      - SE2321000057-5TC4
+      - SE2321000057-5TC6
+      - SE2321000057-5TCJ
+      - SE2321000057-4BNK
+      - SE2321000057-5TPM
+      - SE2321000057-5TPR
+      - SE2321000057-4W4Z
+      - SE2321000057-5TW2
+      - SE2321000057-5TW3
+      - SE2321000057-5SRX
+      - SE2321000057-5VS9
       - SE2321000115-O26806
       - SE2321000115-O32634
       - SE2321000115-O62271
+      - SE2321000115-O77783
+      - SE2321000115-O67064
       - SE2321000115-O99305
+      - SE2321000230-E00373
+      - SE2321000230-E00375
+      - SE2321000230-E00387
+      - SE2321000230-E00389
+      - SE2321000230-E00390
+      - SE2321000230-E00397
+      - SE2321000230-E00406
     activated:
       - &pf010
         name: *kf120
