--- a/src/main/resources/webcert/authorities.yaml
+++ b/src/main/resources/webcert/authorities.yaml
@@ -89,7 +89,9 @@ knownPrivileges:
   - &kp160 SKAPA_NY_FRAGA
   - &kp170 LASA_FRAGA
   - &kp180 BESVARA_FRAGA
-  - &kp190 MARKERA_KOMPLETTERING_SOM_HANTERAD
+  - &kp190 KOPIERA_FRAN_KANDIDAT
+  - &kp200 KOPIERA_LAST_UTKAST
+  - &kp210 MARKERA_KOMPLETTERING_SOM_HANTERAD
 
 # De roller som systemet har
 knownRoles:
@@ -179,7 +181,7 @@ privileges:
           - *ki090 # doi
           - *ki100 # af00213
           - *ki120 # ag7804
-          - *ki130 # TSTRK1062
+          - *ki130 # tstrk1062
           - *ki140 # tstrk1009
       - *ro020 # DJUPINTEGRATION
   - &p040
@@ -198,7 +200,7 @@ privileges:
       - *ki110 # ag114
       - *ki120 # ag7804
       - *ki111 # af00251
-      - *ki130 # TSTRK1062
+      - *ki130 # tstrk1062
       - *ki140 # tstrk1009
     requestOrigins:
       - *ro010 # NORMAL
@@ -291,7 +293,7 @@ privileges:
       - *ki110 # ag114
       - *ki120 # ag7804
       - *ki111 # af00251
-      - *ki130 # TSTRK1062
+      - *ki130 # tstrk1062
       - *ki140 # tstrk1009
     requestOrigins:
       - *ro020 # DJUPINTEGRATION
@@ -349,6 +351,34 @@ privileges:
     requestOrigins: # Implicit alla
   - &p190
     name: *kp190
+    desc: Kopiera data från signerat intyg (kandidat) till utkast som skapats upp via djupintegration
+    intygstyper:
+      - *ki120 # ag7804
+    requestOrigins:
+      - *ro020 # DJUPINTEGRATION
+  - &p200
+    name: *kp200
+    desc: Ger tillåtelse att, för en viss intygstyp, kopiera ett låst utkast
+    intygstyper: # EJ fk7263
+      - *ki020 # ts-bas
+      - *ki030 # ts-diabetes
+      - *ki040 # lisjp
+      - *ki050 # luse
+      - *ki060 # luae_na
+      - *ki070 # luae_fs
+      - *ki080 # db
+      - *ki090 # doi
+      - *ki100 # af00213
+      - *ki110 # ag114
+      - *ki120 # ag7804
+      - *ki111 # af00251
+      - *ki130 # tstrk1062
+      - *ki140 # tstrk1009
+    requestOrigins:
+      - *ro010 # NORMAL
+      - *ro020 # DJUPINTEGRATION
+  - &p210
+    name: *kp210
     desc: Markera komplettering som hanterad
     intygstyper:
       - *ki010 # fk7263
@@ -357,6 +387,7 @@ privileges:
       - *ki060 # luae_na
       - *ki070 # luae_fs
     requestOrigins: # Implicit alla
+
 # Roller
 roles:
   - &r010
@@ -410,7 +441,7 @@ roles:
               - *ki110 # ag114
               - *ki120 # ag7804
               - *ki111 # af00251
-              - *ki130 # TSTRK1062
+              - *ki130 # tstrk1062
               - *ki140 # tstrk1009
           - <<: *ro020 # DJUPINTEGRATION
             intygstyper: # EJ fk7263
@@ -426,7 +457,7 @@ roles:
               - *ki110 # ag114
               - *ki120 # ag7804
               - *ki111 # af00251
-              - *ki130 # TSTRK1062
+              - *ki130 # tstrk1062
               - *ki140 # tstrk1009
       - <<: *p040 # VIDAREBEFORDRA_UTKAST
         requestOrigins:
@@ -498,7 +529,13 @@ roles:
           - <<: *ro010 # NORMAL
           - <<: *ro020 # DJUPINTEGRATION
           - <<: *ro030 # UTHOPP
-      - <<: *p190 # MARKERA_KOMPLETTERING_SOM_HANTERAD
+      - <<: *p190 # KOPIERA_FRAN_KANDIDAT
+        requestOrigins:
+          - <<: *ro020 # DJUPINTEGRATION
+            intygstyper:
+              - *ki120 # ag7804
+      - <<: *p200 # KOPIERA_LAST_UTKAST
+      - <<: *p210 # MARKERA_KOMPLETTERING_SOM_HANTERAD
         requestOrigins:
           - <<: *ro010 # NORMAL
           - <<: *ro020 # DJUPINTEGRATION
@@ -544,7 +581,7 @@ roles:
               - *ki110 # ag114
               - *ki120 # ag7804
               - *ki111 # af00251
-              - *ki130 # TSTRK1062
+              - *ki130 # tstrk1062
               - *ki140 # tstrk1009
       - <<: *p060 # BESVARA_KOMPLETTERINGSFRAGA
         requestOrigins:
@@ -576,13 +613,29 @@ roles:
       - <<: *p160 # SKAPA_NY_FRAGA
         requestOrigins:
           - <<: *ro010 # NORMAL
+            intygstyper:
+              - *ki040 # lisjp
+              - *ki050 # luse
+              - *ki060 # luae_na
+              - *ki070 # luae_fs
       - <<: *p170 # LASA_FRAGA
         requestOrigins:
           - <<: *ro010 # NORMAL
+            intygstyper:
+              - *ki040 # lisjp
+              - *ki050 # luse
+              - *ki060 # luae_na
+              - *ki070 # luae_fs
       - <<: *p180 # BESVARA_FRAGA
         requestOrigins:
           - <<: *ro010 # NORMAL
-      - <<: *p190 # MARKERA_KOMPLETTERING_SOM_HANTERAD
+            intygstyper:
+              - *ki040 # lisjp
+              - *ki050 # luse
+              - *ki060 # luae_na
+              - *ki070 # luae_fs
+      - <<: *p200 # KOPIERA_LAST_UTKAST
+      - <<: *p210 # MARKERA_KOMPLETTERING_SOM_HANTERAD
         requestOrigins:
           - <<: *ro010 # NORMAL
   - &r030
@@ -602,7 +655,7 @@ roles:
           - *ro020 # DJUPINTEGRATION
           - <<: *ro030 # UTHOPP
             intygstyper:
-              - *ki010
+              - *ki010 # fk7263
       - <<: *p005 # SKRIVA_INTYG
         intygstyper:
           - *ki010 # fk7263
@@ -626,8 +679,8 @@ roles:
           - *ro020 # DJUPINTEGRATION
       - <<: *p020 # MAKULERA_INTYG
         intygstyper:
-          - *ki010
-          - *ki040
+          - *ki010 # fk7263
+          - *ki040 # lisjp
           - *ki100 # af00213
           - *ki110
           - *ki120 # ag7804
@@ -637,7 +690,7 @@ roles:
           - <<: *ro020 # DJUPINTEGRATION
       - <<: *p030 # FORNYA_INTYG
         intygstyper:
-          - *ki040
+          - *ki040 # lisjp
           - *ki120 # ag7804
           - *ki111 # af00251
         requestOrigins:
@@ -659,131 +712,131 @@ roles:
         requestOrigins:
           - <<: *ro010 # NORMAL
             intygstyper:
-              - *ki040
+              - *ki040 # lisjp
               - *ki100 # af00213
               - *ki120 # ag7804
               - *ki111 # af00251
           - <<: *ro030 # UTHOPP
             intygstyper:
-              - *ki010
+              - *ki010 # fk7263
       - <<: *p050 # VIDAREBEFORDRA_FRAGASVAR
         intygstyper:
-          - *ki040
+          - *ki040 # lisjp
         requestOrigins:
           - <<: *ro010 # NORMAL
             intygstyper:
-              - *ki040
+              - *ki040 # lisjp
           - <<: *ro030 # UTHOPP
             intygstyper:
-              - *ki010
+              - *ki010 # fk7263
       - <<: *p060 # BESVARA_KOMPLETTERINGSFRAGA
         intygstyper:
-          - *ki040
+          - *ki040 # lisjp
         requestOrigins:
           - <<: *ro010 # NORMAL
             intygstyper:
-              - *ki040
+              - *ki040 # lisjp
           - <<: *ro020 # DJUPINTEGRATION
             intygstyper:
-              - *ki040
+              - *ki040 # lisjp
           - <<: *ro030 # UTHOPP
             intygstyper:
-              - *ki010
+              - *ki010 # fk7263
       - <<: *p070 # FILTRERA_PA_LAKARE
         intygstyper:
-          - *ki010
-          - *ki040
+          - *ki010 # fk7263
+          - *ki040 # lisjp
           - *ki100 # af00213
           - *ki120 # ag7804
           - *ki111 # af00251
         requestOrigins:
           - <<: *ro010 # NORMAL
             intygstyper:
-              - *ki010
-              - *ki040
+              - *ki010 # fk7263
+              - *ki040 # lisjp
               - *ki100 # af00213
               - *ki120 # ag7804
               - *ki111 # af00251
       - <<: *p080 # ATKOMST_ANDRA_ENHETER
         intygstyper:
-          - *ki010
-          - *ki040
+          - *ki010 # fk7263
+          - *ki040 # lisjp
           - *ki100 # af00213
         requestOrigins:
           - <<: *ro010 # NORMAL
             intygstyper:
-              - *ki010
-              - *ki040
+              - *ki010 # fk7263
+              - *ki040 # lisjp
               - *ki100 # af00213
               - *ki120 # ag7804
               - *ki111 # af00251
           - <<: *ro030 # UTHOPP
             intygstyper:
-              - *ki010
+              - *ki010 # fk7263
       - <<: *p090 # HANTERA_PERSONUPPGIFTER
         intygstyper:
-          - *ki010
-          - *ki040
+          - *ki010 # fk7263
+          - *ki040 # lisjp
           - *ki100 #af00213
           - *ki120 # ag7804
           - *ki111 # af00251
         requestOrigins:
           - <<: *ro010 # NORMAL
             intygstyper:
-              - *ki010
-              - *ki040
+              - *ki010 # fk7263
+              - *ki040 # lisjp
               - *ki100 # af00213
               - *ki120 # ag7804
               - *ki111 # af00251
           - <<: *ro030 # UTHOPP
             intygstyper:
-              - *ki010
+              - *ki010 # fk7263
       - <<: *p100 # HANTERA_MAILSVAR
         intygstyper:
-          - *ki010
-          - *ki040
+          - *ki010 # fk7263
+          - *ki040 # lisjp
           - *ki100 # af00213
           - *ki120 # ag7804
           - *ki111 # af00251
         requestOrigins:
           - <<: *ro010 # NORMAL
             intygstyper:
-              - *ki010
-              - *ki040
+              - *ki010 # fk7263
+              - *ki040 # lisjp
               - *ki100 # af00213
               - *ki120 # ag7804
               - *ki111 # af00251
           - <<: *ro030 # UTHOPP
             intygstyper:
-              - *ki010
+              - *ki010 # fk7263
       - <<: *p110 # NAVIGERING
         intygstyper:
-          - *ki010
-          - *ki040
+          - *ki010 # fk7263
+          - *ki040 # lisjp
           - *ki100 # af00213
           - *ki120 # ag7804
           - *ki111 # af00251
         requestOrigins:
           - <<: *ro010 # NORMAL
             intygstyper:
-              - *ki010
-              - *ki040
+              - *ki010 # fk7263
+              - *ki040 # lisjp
               - *ki100 # af00213
               - *ki120 # ag7804
               - *ki111 # af00251
           - <<: *ro030 # UTHOPP
             intygstyper:
-              - *ki010
+              - *ki010 # fk7263
       - <<: *p120 # SVARA_MED_NYTT_INTYG
         intygstyper:
-          - *ki040
+          - *ki040 # lisjp
         requestOrigins:
           - <<: *ro010 # NORMAL
             intygstyper:
-              - *ki040
+              - *ki040 # lisjp
           - <<: *ro020 # DJUPINTEGRATION
             intygstyper:
-              - *ki040
+              - *ki040 # lisjp
       - <<: *p140 # HANTERA_SEKRETESSMARKERAD_PATIENT
         intygstyper:
           - *ki010 # fk7263
@@ -797,49 +850,61 @@ roles:
           - <<: *ro020 # DJUPINTEGRATION
           - <<: *ro030 # UTHOPP
             intygstyper:
-              - *ki010
+              - *ki010 # fk7263
               - *ki120 # ag7804
       - <<: *p150 # GODKANNA_MOTTAGARE
       - <<: *p160 # SKAPA_NY_FRAGA
         intygstyper:
-          - *ki040
+          - *ki040 # lisjp
         requestOrigins:
           - <<: *ro010 # NORMAL
             intygstyper:
-              - *ki040
+              - *ki040 # lisjp
           - <<: *ro020 # DJUPINTEGRATION
             intygstyper:
-              - *ki040
+              - *ki040 # lisjp
           - <<: *ro030 # UTHOPP
             intygstyper:
-              - *ki010
+              - *ki010 # fk7263
       - <<: *p170 # LASA_FRAGA
         intygstyper:
-          - *ki040
+          - *ki040 # lisjp
         requestOrigins:
           - <<: *ro010 # NORMAL
             intygstyper:
-              - *ki040
+              - *ki040 # lisjp
           - <<: *ro020 # DJUPINTEGRATION
             intygstyper:
-              - *ki040
+              - *ki040 # lisjp
           - <<: *ro030 # UTHOPP
             intygstyper:
-              - *ki010
+              - *ki010 # fk7263
       - <<: *p180 # BESVARA_FRAGA
         intygstyper:
-          - *ki040
+          - *ki040 # lisjp
         requestOrigins:
           - <<: *ro010 # NORMAL
             intygstyper:
-              - *ki040
+              - *ki040 # lisjp
           - <<: *ro020 # DJUPINTEGRATION
             intygstyper:
-              - *ki040
+              - *ki040 # lisjp
           - <<: *ro030 # UTHOPP
             intygstyper:
-              - *ki010
-      - <<: *p190 # MARKERA_KOMPLETTERING_SOM_HANTERAD
+              - *ki010 # fk7263
+      - <<: *p190 # KOPIERA_FRAN_KANDIDAT
+        requestOrigins:
+          - <<: *ro020 # DJUPINTEGRATION
+            intygstyper:
+              - *ki120 # ag7804
+      - <<: *p200 # KOPIERA_LAST_UTKAST
+        intygstyper:
+          - *ki040 # lisjp
+          - *ki100 # af00213
+          - *ki110 # ag114
+          - *ki120 # ag7804
+          - *ki111 # af00251
+      - <<: *p210 # MARKERA_KOMPLETTERING_SOM_HANTERAD
         intygstyper:
         requestOrigins:
           - <<: *ro010 # NORMAL
@@ -924,23 +989,59 @@ roles:
       - <<: *p160 # SKAPA_NY_FRAGA
         requestOrigins:
           - <<: *ro010 # NORMAL
+            intygstyper:
+              - *ki040 # lisjp
+              - *ki050 # luse
+              - *ki060 # luae_na
+              - *ki070 # luae_fs
           - <<: *ro020 # DJUPINTEGRATION
+            intygstyper:
+              - *ki040 # lisjp
+              - *ki050 # luse
+              - *ki060 # luae_na
+              - *ki070 # luae_fs
           - <<: *ro030 # UTHOPP
       - <<: *p170 # LASA_FRAGA
         requestOrigins:
           - <<: *ro010 # NORMAL
+            intygstyper:
+              - *ki040 # lisjp
+              - *ki050 # luse
+              - *ki060 # luae_na
+              - *ki070 # luae_fs
           - <<: *ro040 # READONLY
             intygstyper:
               - *ki010 # fk7263
               - *ki040 # lisjp
           - <<: *ro020 # DJUPINTEGRATION
+            intygstyper:
+              - *ki040 # lisjp
+              - *ki050 # luse
+              - *ki060 # luae_na
+              - *ki070 # luae_fs
           - <<: *ro030 # UTHOPP
       - <<: *p180 # BESVARA_FRAGA
         requestOrigins:
           - <<: *ro010 # NORMAL
+            intygstyper:
+              - *ki040 # lisjp
+              - *ki050 # luse
+              - *ki060 # luae_na
+              - *ki070 # luae_fs
           - <<: *ro020 # DJUPINTEGRATION
+            intygstyper:
+              - *ki040 # lisjp
+              - *ki050 # luse
+              - *ki060 # luae_na
+              - *ki070 # luae_fs
           - <<: *ro030 # UTHOPP
-      - <<: *p190 # MARKERA_KOMPLETTERING_SOM_HANTERAD
+      - <<: *p190 # KOPIERA_FRAN_KANDIDAT
+        requestOrigins:
+          - <<: *ro020 # DJUPINTEGRATION
+            intygstyper:
+              - *ki120 # ag7804
+      - <<: *p200 # KOPIERA_LAST_UTKAST
+      - <<: *p210 # MARKERA_KOMPLETTERING_SOM_HANTERAD
         requestOrigins:
           - <<: *ro010 # NORMAL
           - <<: *ro020 # DJUPINTEGRATION
@@ -954,19 +1055,25 @@ titles:
     role: *r030 # TANDLAKARE
 
 # Kombination befattningskoder och gruppförskrivarkoder
+# roleTypeName används för loggningssyften för att se mer detaljer om typ av läkare-roll.
 titleCodes:
   - titleCode: 204010
     groupPrescriptionCode:
     role: *r010 # LAKARE
+    roleTypeName: Läkare - AT
   - titleCode: 203090
     groupPrescriptionCode: 9300005
     role: *r010 # LAKARE
+    roleTypeName: Läkare - inom EU
   - titleCode: 203090
     groupPrescriptionCode: 9400003
     role: *r010 # LAKARE
+    roleTypeName: Läkare - utom EU
   - titleCode: 204090
     groupPrescriptionCode: 9100009
     role: *r010 # LAKARE
+    roleTypeName: Läkare - Vikariat
   - titleCode: 204090
     groupPrescriptionCode: 9200007
     role: *r010 # LAKARE
+    roleTypeName: Läkare - Student
