--- a/src/main/resources/webcert/features.yaml
+++ b/src/main/resources/webcert/features.yaml
@@ -75,6 +75,7 @@ knownFeatures:
   - &kf220 OAUTH_AUTHENTICATION
   - &kf230 CREATE_DRAFT_PREFILL
   - &kf240 IDP_CONNECTIVITY_CHECK
+  - &kf250 FILTER_OUTDATED_MESSAGES
 
 # Aktiverade features i Webcert
 features:
@@ -320,6 +321,10 @@ features:
     name: *kf240
     desc: Aktivera IDP konnektivitetskontroll
     global: true
+  - &f250
+    name: *kf250
+    desc: Aktivera bortfiltrering av utdaterade meddelanden
+    global: false
 
 pilots:
   - name: TEST_PILOT
