--- a/src/main/resources/webcert/features.yaml
+++ b/src/main/resources/webcert/features.yaml
@@ -329,7 +329,7 @@ features:
   - &f260
     name: *kf260
     desc: Tillåt att utfärda intyg på valideringspersoner
-    global: true
+    global: false
 
 pilots:
   - name: TEST_PILOT
