Revert "some updates for sit2 feature branch, taken from develop"
This reverts commit 84dea2c8fc9ab29e72daeafec89bd962531c23c3.

--- a/src/main/resources/texts/texterMU_AG114_v1.0.properties
+++ b/src/main/resources/texts/texterMU_AG114_v1.0.properties
@@ -1,5 +1,5 @@
 #Properties for AG114 1.0 pdf generation
 
-formId=SKR AG1-14 - Fastst\u00E4lld av Sveriges Kommuner och Regioner
+formId=SKL AG1-14 - Fastst\u00E4lld av Sveriges Kommuner och Landsting
 blankettId=AG114
 blankettVersion=01
