--- a/src/main/resources/webcert/authorities.yaml
+++ b/src/main/resources/webcert/authorities.yaml
@@ -512,6 +512,9 @@ roles:
             intygstyper:
               - *ki010 # fk7163
               - *ki040 # lisjp
+              - *ki050 # luse
+              - *ki060 # luae_na
+              - *ki070 # luae_fs
           - <<: *ro020 # DJUPINTEGRATION
           - <<: *ro030 # UTHOPP
       - <<: *p180 # BESVARA_FRAGA
@@ -988,6 +991,9 @@ roles:
             intygstyper:
               - *ki010 # fk7263
               - *ki040 # lisjp
+              - *ki050 # luse
+              - *ki060 # luae_na
+              - *ki070 # luae_fs
           - <<: *ro020 # DJUPINTEGRATION
             intygstyper:
               - *ki040 # lisjp
