INTYGFV-13370: New units for SRS

--- a/src/main/resources/webcert/features.yaml
+++ b/src/main/resources/webcert/features.yaml
@@ -375,6 +375,14 @@ pilots:
       - SE2321000230-E00390
       - SE2321000230-E00397
       - SE2321000230-E00406
+      - SE2321000032-4CVT
+      - SE2321000032-43N6
+      - SE2321000032-43ST
+      - SE2321000032-4HFG
+      - SE2321000032-583C
+      - SE2321000032-3XFA
+      - SE2321000032-4W0L
+      - SE2321000032-42R3
     activated:
       - &pf010
         name: *kf120
