INTYGFV-13303: Updated pdf path to new version

--- a/src/main/resources/texts/texter_DB_v1.0.properties
+++ b/src/main/resources/texts/texter_DB_v1.0.properties
@@ -1,2 +1,3 @@
 #Properties for DB
-pdfPath=pdf/Blankett-Dodsbevis-2016-53.pdf
+#pdfPath=pdf/Blankett-Dodsbevis-2016-53.pdf
+pdfPath=pdf/Blankett-Dodsbevis-2018-54.pdf
