--- a/src/main/resources/webcert/features.yaml
+++ b/src/main/resources/webcert/features.yaml
@@ -290,6 +290,8 @@ features:
     global: true
     intygstyper:
       - *ki010 # FK7263
+      - *ki020 # TS-BAS
+      - *ki030 # TS-DIABETES
       - *ki040 # LUSE
       - *ki050 # LISJP
       - *ki060 # LUAE_NA
