--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'maven'
     id 'idea'
-    id "se.inera.intyg.plugin.common" version "3.1.2"
+    id "se.inera.intyg.plugin.common" version "3.1.3"
 }
 
 group = 'se.inera.intyg.refdata'
@@ -12,8 +12,8 @@ targetCompatibility = 11
 task createVersionPropertyFile(type: VersionPropertyFileTask)
 
 uploadArchives.repositories.mavenDeployer {
-    snapshotRepository(url: "https://build-inera.nordicmedtest.se/nexus/repository/snapshots/") {
-        authentication(userName: System.properties['nexusUsername'], password: System.properties['nexusPassword'])
+    snapshotRepository(url: "https://nexus.drift.inera.se/repository/maven-snapshots/") {
+        authentication(userName: System.properties['ineraNexusUsername'], password: System.properties['ineraNexusPassword'])
     }
 }
 
