--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,6 @@
 pluginManagement {
     repositories {
-        maven { url "https://build-inera.nordicmedtest.se/nexus/repository/releases/" }
+        maven { url "https://nexus.drift.inera.se/repository/maven-releases/" }
         gradlePluginPortal()
     }
 }
