--- a/src/main/resources/webcert/authorities.yaml
+++ b/src/main/resources/webcert/authorities.yaml
@@ -295,6 +295,8 @@ privileges:
     desc: Hantera patient med sekretessmarkering
     intygstyper:
       - *ki010 # fk7263
+      - *ki020 # ts-bas
+      - *ki030 # ts-diabetes
       - *ki040 # lisjp
       - *ki050 # luse
       - *ki060 # luae_na
@@ -344,9 +346,10 @@ privileges:
     requestOrigins: # Implicit alla
   - &p190
     name: *kp190
-    desc: Kopiera data från signerat intyg (kandidat) till utkast som skapats upp via djupintegration
+    desc: Kopiera data från signerat intyg (kandidat) till utkast
     intygstyper:
       - *ki120 # ag7804
+      - *ki090 # doi
     requestOrigins:
       - *ro020 # DJUPINTEGRATION
   - &p200
@@ -512,6 +515,9 @@ roles:
             intygstyper:
               - *ki010 # fk7163
               - *ki040 # lisjp
+              - *ki050 # luse
+              - *ki060 # luae_na
+              - *ki070 # luae_fs
           - <<: *ro020 # DJUPINTEGRATION
           - <<: *ro030 # UTHOPP
       - <<: *p180 # BESVARA_FRAGA
@@ -524,6 +530,10 @@ roles:
           - <<: *ro020 # DJUPINTEGRATION
             intygstyper:
               - *ki120 # ag7804
+              - *ki090 # doi
+          - <<: *ro010 # NORMAL
+            intygstyper:
+              - *ki090 # doi
       - <<: *p200 # KOPIERA_LAST_UTKAST
       - <<: *p210 # MARKERA_KOMPLETTERING_SOM_HANTERAD
         requestOrigins:
@@ -624,6 +634,11 @@ roles:
               - *ki050 # luse
               - *ki060 # luae_na
               - *ki070 # luae_fs
+      - <<: *p190 # KOPIERA_FRAN_KANDIDAT
+        requestOrigins:
+          - <<: *ro010 # NORMAL
+            intygstyper:
+              - *ki090 # doi
       - <<: *p200 # KOPIERA_LAST_UTKAST
       - <<: *p210 # MARKERA_KOMPLETTERING_SOM_HANTERAD
         requestOrigins:
@@ -988,6 +1003,9 @@ roles:
             intygstyper:
               - *ki010 # fk7263
               - *ki040 # lisjp
+              - *ki050 # luse
+              - *ki060 # luae_na
+              - *ki070 # luae_fs
           - <<: *ro020 # DJUPINTEGRATION
             intygstyper:
               - *ki040 # lisjp
@@ -1015,6 +1033,10 @@ roles:
           - <<: *ro020 # DJUPINTEGRATION
             intygstyper:
               - *ki120 # ag7804
+              - *ki090 # doi
+          - <<: *ro010 # NORMAL
+            intygstyper:
+              - *ki090 # doi
       - <<: *p200 # KOPIERA_LAST_UTKAST
       - <<: *p210 # MARKERA_KOMPLETTERING_SOM_HANTERAD
         requestOrigins:
