--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'maven'
     id 'idea'
-    id "se.inera.intyg.plugin.common" version "2.0.9"
+    id "se.inera.intyg.plugin.common" version "3.1.3"
 }
 
 ext {
@@ -9,6 +9,8 @@ ext {
 
 group = 'se.inera.intyg.refdata'
 version = System.properties['buildVersion'] ?: '0-SNAPSHOT'
+sourceCompatibility = 11
+targetCompatibility = 11
 
 if (System.properties['customBuildName']) {
     jar.archiveBaseName = System.properties['customBuildName']
@@ -17,27 +19,9 @@ if (System.properties['customBuildName']) {
 task createVersionPropertyFile(type: VersionPropertyFileTask)
 
 uploadArchives.repositories.mavenDeployer {
-    repository(url: "https://build-inera.nordicmedtest.se/nexus/repository/releases/") {
-        authentication(userName: System.properties['nexusUsername'], password: System.properties['nexusPassword'])
+    repository(url: "https://nexus.drift.inera.se/repository/maven-releases/") {
+        authentication(userName: System.properties['ineraNexusUsername'], password: System.properties['ineraNexusPassword'])
     }
 }
 
 task tagRelease(type: TagReleaseTask)
-
-task zipResources(type: ArchiveDirectoryTask) {
-    sourcePath "${projectDir}/src/main/resources"
-    include "*"
-    include "*/*" //to include contents of a folder present inside from directory
-    archiveName "resources.zip"
-    destinationDir(file("lib"))
-    archiveOnlyIfDiff file("${destinationDir}/${archiveName}").exists()
-}
-
-dependencies {
-}
-
-repositories {
-    mavenLocal()
-    maven { url "https://build-inera.nordicmedtest.se/nexus/repository/releases/" }
-    maven { url "http://repo.maven.apache.org/maven2" }
-}
