--- a/build.gradle
+++ b/build.gradle
@@ -17,8 +17,8 @@ if (System.properties['customBuildName']) {
 task createVersionPropertyFile(type: VersionPropertyFileTask)
 
 uploadArchives.repositories.mavenDeployer {
-    repository(url: "https://build-inera.nordicmedtest.se/nexus/repository/releases/") {
-        authentication(userName: System.properties['nexusUsername'], password: System.properties['nexusPassword'])
+    repository(url: "https://nexus.drift.inera.se/repository/maven-releases/") {
+        authentication(userName: System.properties['ineraNexusUsername'], password: System.properties['ineraNexusPassword'])
     }
 }
 
@@ -29,6 +29,6 @@ dependencies {
 
 repositories {
     mavenLocal()
-    maven { url "https://build-inera.nordicmedtest.se/nexus/repository/releases/" }
+    maven { url "https://nexus.drift.inera.se/repository/maven-releases/" }
     maven { url "http://repo.maven.apache.org/maven2" }
 }
